--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
     "react-dom": "https://aistudiocdn.com/react-dom@^18.3.1",
     "react-dom/client": "https://aistudiocdn.com/react-dom@^18.3.1/client",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.3.1/",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.84.0"
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.84.0",
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1"
   }
 }
 </script>
