--- a/index.html
+++ b/index.html
@@ -8,28 +8,61 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
           extend: {
             fontFamily: {
               sans: ['Inter', 'sans-serif'],
+              mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              'brand-bg': '#0D1117',
-              'brand-surface': '#161B22',
-              'brand-border': '#30363D',
-              'brand-primary': '#58A6FF',
-              'brand-secondary': '#8B949E',
-              'brand-text': '#C9D1D9',
-              'brand-success': '#3FB950',
-              'brand-danger': '#F85149',
+              'brand-bg': '#0B0E14', // Deep Space Black
+              'brand-surface': '#1C212E', // Dark Blue-Grey
+              'brand-border': 'rgba(255, 255, 255, 0.08)',
+              'brand-primary': '#00E5FF', // Cyan Neon
+              'brand-accent': '#7C3AED', // Electric Purple
+              'brand-secondary': '#94A3B8', // Cool Grey
+              'brand-text': '#E2E8F0', // Ice White
+              'brand-success': '#00FFA3', // Cyber Green
+              'brand-danger': '#FF2E5B', // Cyber Red
             },
+            backgroundImage: {
+                'cyber-gradient': 'linear-gradient(135deg, rgba(124, 58, 237, 0.1) 0%, rgba(0, 229, 255, 0.05) 100%)',
+                'glass-gradient': 'linear-gradient(180deg, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.01) 100%)',
+            },
+            boxShadow: {
+                'neon': '0 0 10px rgba(0, 229, 255, 0.3), 0 0 20px rgba(0, 229, 255, 0.1)',
+                'neon-purple': '0 0 10px rgba(124, 58, 237, 0.3), 0 0 20px rgba(124, 58, 237, 0.1)',
+            }
           },
         },
       }
     </script>
+    <style>
+        /* Custom Scrollbar for Cyberpunk Look */
+        ::-webkit-scrollbar {
+            width: 6px;
+            height: 6px;
+        }
+        ::-webkit-scrollbar-track {
+            background: #0B0E14;
+        }
+        ::-webkit-scrollbar-thumb {
+            background: #334155;
+            border-radius: 3px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #00E5FF;
+        }
+        
+        /* Body Background Gradient */
+        body {
+            background: radial-gradient(circle at 50% 0%, #1e293b 0%, #0B0E14 60%);
+            background-attachment: fixed;
+        }
+    </style>
     <script>
       // Security: Disable right-click and specific key combinations
       document.addEventListener('contextmenu', event => event.preventDefault());
@@ -70,7 +103,7 @@
 }
 </script>
 </head>
-  <body class="bg-brand-bg text-brand-text select-none">
+  <body class="bg-brand-bg text-brand-text select-none antialiased overflow-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
