--- a/index.html
+++ b/index.html
@@ -18,48 +18,52 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              'brand-bg': '#0B0E14', // Deep Space Black
-              'brand-surface': '#1C212E', // Dark Blue-Grey
-              'brand-border': 'rgba(255, 255, 255, 0.08)',
-              'brand-primary': '#00E5FF', // Cyan Neon
-              'brand-accent': '#7C3AED', // Electric Purple
-              'brand-secondary': '#94A3B8', // Cool Grey
-              'brand-text': '#E2E8F0', // Ice White
-              'brand-success': '#00FFA3', // Cyber Green
-              'brand-danger': '#FF2E5B', // Cyber Red
+              'brand-bg': '#0F172A', // Slate 900 - Richer Dark
+              'brand-surface': '#1E293B', // Slate 800
+              'brand-border': 'rgba(255, 255, 255, 0.1)',
+              'brand-primary': '#3B82F6', // Royal Blue
+              'brand-accent': '#8B5CF6', // Violet
+              'brand-secondary': '#94A3B8', // Slate 400
+              'brand-text': '#F8FAFC', // Slate 50
+              'brand-success': '#10B981', // Emerald
+              'brand-danger': '#EF4444', // Red
+              'brand-warning': '#F59E0B', // Amber
             },
             backgroundImage: {
-                'cyber-gradient': 'linear-gradient(135deg, rgba(124, 58, 237, 0.1) 0%, rgba(0, 229, 255, 0.05) 100%)',
-                'glass-gradient': 'linear-gradient(180deg, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.01) 100%)',
+                'cyber-gradient': 'linear-gradient(to right, #0F172A, #1E293B)',
+                'card-gradient': 'linear-gradient(145deg, rgba(30, 41, 59, 0.7) 0%, rgba(15, 23, 42, 0.6) 100%)',
             },
             boxShadow: {
-                'neon': '0 0 10px rgba(0, 229, 255, 0.3), 0 0 20px rgba(0, 229, 255, 0.1)',
-                'neon-purple': '0 0 10px rgba(124, 58, 237, 0.3), 0 0 20px rgba(124, 58, 237, 0.1)',
+                'neon': '0 0 15px rgba(59, 130, 246, 0.2)',
+                'glass': '0 8px 32px 0 rgba(0, 0, 0, 0.3)',
             }
           },
         },
       }
     </script>
     <style>
-        /* Custom Scrollbar for Cyberpunk Look */
+        /* Custom Scrollbar */
         ::-webkit-scrollbar {
-            width: 6px;
-            height: 6px;
+            width: 8px;
+            height: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #0B0E14;
+            background: #0F172A;
         }
         ::-webkit-scrollbar-thumb {
             background: #334155;
-            border-radius: 3px;
+            border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #00E5FF;
+            background: #475569;
         }
         
-        /* Body Background Gradient */
         body {
-            background: radial-gradient(circle at 50% 0%, #1e293b 0%, #0B0E14 60%);
+            background-color: #0F172A;
+            /* Subtle Mesh Gradient in background */
+            background-image: 
+                radial-gradient(at 0% 0%, rgba(59, 130, 246, 0.15) 0px, transparent 50%),
+                radial-gradient(at 100% 0%, rgba(139, 92, 246, 0.15) 0px, transparent 50%);
             background-attachment: fixed;
         }
     </style>
@@ -103,7 +107,7 @@
 }
 </script>
 </head>
-  <body class="bg-brand-bg text-brand-text select-none antialiased overflow-hidden">
+  <body class="bg-brand-bg text-brand-text select-none antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
