--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
               mono: ['JetBrains Mono', 'monospace'],
             },
             colors: {
-              'brand-bg': '#0F172A', // Slate 900 - Richer Dark
-              'brand-surface': '#1E293B', // Slate 800
-              'brand-border': 'rgba(255, 255, 255, 0.1)',
-              'brand-primary': '#3B82F6', // Royal Blue
+              'brand-bg': '#0B0E14', // Darker, Deep Space Blue
+              'brand-surface': '#151B28', // Slightly lighter for cards
+              'brand-border': 'rgba(255, 255, 255, 0.08)',
+              'brand-primary': '#3B82F6', // Royal Blue (Vibrant)
               'brand-accent': '#8B5CF6', // Violet
               'brand-secondary': '#94A3B8', // Slate 400
               'brand-text': '#F8FAFC', // Slate 50
-              'brand-success': '#10B981', // Emerald
-              'brand-danger': '#EF4444', // Red
-              'brand-warning': '#F59E0B', // Amber
+              'brand-success': '#10B981', // Emerald (Restored)
+              'brand-danger': '#EF4444', // Red (Restored)
+              'brand-warning': '#F59E0B', // Amber (Restored)
             },
             backgroundImage: {
                 'cyber-gradient': 'linear-gradient(to right, #0F172A, #1E293B)',
-                'card-gradient': 'linear-gradient(145deg, rgba(30, 41, 59, 0.7) 0%, rgba(15, 23, 42, 0.6) 100%)',
+                'glass-gradient': 'linear-gradient(145deg, rgba(255, 255, 255, 0.05) 0%, rgba(255, 255, 255, 0.01) 100%)',
             },
             boxShadow: {
-                'neon': '0 0 15px rgba(59, 130, 246, 0.2)',
+                'neon': '0 0 20px rgba(59, 130, 246, 0.15)',
+                'neon-green': '0 0 20px rgba(16, 185, 129, 0.15)',
+                'neon-red': '0 0 20px rgba(239, 68, 68, 0.15)',
                 'glass': '0 8px 32px 0 rgba(0, 0, 0, 0.3)',
             }
           },
@@ -44,26 +46,26 @@
     <style>
         /* Custom Scrollbar */
         ::-webkit-scrollbar {
-            width: 8px;
-            height: 8px;
+            width: 6px;
+            height: 6px;
         }
         ::-webkit-scrollbar-track {
-            background: #0F172A;
+            background: #0B0E14;
         }
         ::-webkit-scrollbar-thumb {
             background: #334155;
-            border-radius: 4px;
+            border-radius: 10px;
         }
         ::-webkit-scrollbar-thumb:hover {
             background: #475569;
         }
         
         body {
-            background-color: #0F172A;
-            /* Subtle Mesh Gradient in background */
+            background-color: #0B0E14;
+            /* Deep Space Radial Gradient */
             background-image: 
-                radial-gradient(at 0% 0%, rgba(59, 130, 246, 0.15) 0px, transparent 50%),
-                radial-gradient(at 100% 0%, rgba(139, 92, 246, 0.15) 0px, transparent 50%);
+                radial-gradient(circle at 15% 50%, rgba(59, 130, 246, 0.08), transparent 25%),
+                radial-gradient(circle at 85% 30%, rgba(139, 92, 246, 0.08), transparent 25%);
             background-attachment: fixed;
         }
     </style>
